cambio en description head
git commit -m cambio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Convertidor</title>
         <link href="normalize.css" rel="stylesheet" >
         <link href="base.css" rel="stylesheet" >
+        <meta name="description" content="Convierte tus pesos a dólares con esta página.">
         
     </head>
 <body>
